--- a/Editor/Resources/UI/TabContents/ImportSettings/ImportSettings.uxml
+++ b/Editor/Resources/UI/TabContents/ImportSettings/ImportSettings.uxml
@@ -1,11 +1,10 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <Style src="project://database/Packages/tech.uslog.eauploader/Editor/Resources/UI/TabContents/ImportSettings/ImportSettings.uss?fileID=7433441132597879392&amp;guid=303ec605975974b42bafe730e85b28c8&amp;type=3#ImportSettings" />
-    <Style src="project://database/Packages/tech.uslog.eauploader/Editor/Resources/UI/styles.uss?fileID=7433441132597879392&amp;guid=fe97900dfa847494bac4ec28615d133a&amp;type=3#styles" />
-    <ui:VisualElement name="row" class="row">
-        <ui:VisualElement name="import_settings" class="import_settings" />
-        <ui:VisualElement name="manage_models" class="manage_models" />
-        <ui:VisualElement name="library" class="library">
-            <ui:Label tabindex="-1" text="EAUploader LIBRARY" parse-escape-sequences="true" display-tooltip-when-elided="true" enable-rich-text="true" class="title" />
+    <Style src="project://database/Assets/EAUploader/UI/tailwind.uss" />
+    <ui:VisualElement class="flex-1 flex-row">
+        <ui:VisualElement name="import_settings" class="w-one-quarter p-4" />
+        <ui:VisualElement name="manage_models" class="flex-1 p-4" />
+        <ui:VisualElement name="library" class="w-one-quarter p-4">
+            <ui:Label tabindex="-1" text="EAUploader LIBRARY" parse-escape-sequences="true" display-tooltip-when-elided="true" enable-rich-text="true" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
