--- a/Editor/Resources/UI/MainWindow.uxml
+++ b/Editor/Resources/UI/MainWindow.uxml
@@ -1,10 +1,10 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/EAUploader/UI/tailwind.uss" />
     <ui:VisualElement name="tabs" class="tabs flex-row h-8">
-        <ui:Button text="インポート/設定" parse-escape-sequences="true" display-tooltip-when-elided="true" name="settings" class="flex-1" />
-        <ui:Button text="セットアップ" parse-escape-sequences="true" display-tooltip-when-elided="true" name="setup" class="flex-1" />
-        <ui:Button text="アップロード" parse-escape-sequences="true" display-tooltip-when-elided="true" name="upload" class="flex-1" />
-        <ui:Button text="マーケット" parse-escape-sequences="true" display-tooltip-when-elided="true" name="market" class="flex-1" />
+        <ui:Button text="Import/Settings" parse-escape-sequences="true" display-tooltip-when-elided="true" name="settings" class="flex-1" />
+        <ui:Button text="Setup" parse-escape-sequences="true" display-tooltip-when-elided="true" name="setup" class="flex-1" />
+        <ui:Button text="Upload" parse-escape-sequences="true" display-tooltip-when-elided="true" name="upload" class="flex-1" />
+        <ui:Button text="Market" parse-escape-sequences="true" display-tooltip-when-elided="true" name="market" class="flex-1" />
     </ui:VisualElement>
     <ui:VisualElement name="contentRoot" class="contentRoot flex-1" style="background-color: rgba(0, 0, 0, 0); background-image: none;" />
 </ui:UXML>
