change: design and improve some

--- a/Editor/Resources/UI/MainWindow.uxml
+++ b/Editor/Resources/UI/MainWindow.uxml
@@ -9,19 +9,19 @@
     editor-extension-mode="False">
     <Style src="project://database/Assets/EAUploader/UI/tailwind.uss" />
     <ui:VisualElement name="tabs" class="tabs flex-row h-8">
-        <ui:Button parse-escape-sequences="true" display-tooltip-when-elided="true" name="settings" class="button-with-icons flex-1">
+        <ui:Button parse-escape-sequences="true" display-tooltip-when-elided="true" name="settings" class="tab-button">
             <eau:MaterialIcon icon="settings" />
             <ui:Label text="Import/Settings" />
         </ui:Button>
-        <ui:Button parse-escape-sequences="true" display-tooltip-when-elided="true" name="setup" class="button-with-icons flex-1">
+        <ui:Button parse-escape-sequences="true" display-tooltip-when-elided="true" name="setup" class="tab-button">
             <eau:MaterialIcon icon="edit" />
 			<ui:Label text="Setup"  />
         </ui:Button>
-        <ui:Button parse-escape-sequences="true" display-tooltip-when-elided="true" name="upload" class="button-with-icons flex-1">
+        <ui:Button parse-escape-sequences="true" display-tooltip-when-elided="true" name="upload" class="tab-button">
             <eau:MaterialIcon icon="upload" />
 			<ui:Label text="Upload" />
         </ui:Button>
-        <ui:Button parse-escape-sequences="true" display-tooltip-when-elided="true" name="market" class="button-with-icons flex-1">
+        <ui:Button parse-escape-sequences="true" display-tooltip-when-elided="true" name="market" class="tab-button">
             <eau:MaterialIcon icon="travel_explore" />
             <ui:Label text="Market" />
         </ui:Button>
