--- a/Editor/Resources/UI/TabContents/ImportSettings/ImportSettings.uxml
+++ b/Editor/Resources/UI/TabContents/ImportSettings/ImportSettings.uxml
@@ -1,10 +1,8 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/EAUploader/UI/tailwind.uss" />
     <ui:VisualElement class="flex-1 flex-row">
-        <ui:VisualElement name="import_settings" class="w-one-quarter p-4" />
-        <ui:VisualElement name="manage_models" class="flex-1 p-4" />
-        <ui:VisualElement name="library" class="w-one-quarter p-4">
-            <ui:Label tabindex="-1" text="EAUploader LIBRARY" parse-escape-sequences="true" display-tooltip-when-elided="true" enable-rich-text="true" />
-        </ui:VisualElement>
+        <ui:VisualElement name="import_settings" class="w-one-quarter p-4 border-r border-zinc-300" />
+        <ui:VisualElement name="manage_models" class="flex-1 p-4 border-r border-zinc-300" />
+        <ui:VisualElement name="library_container" class="w-one-quarter p-4" />
     </ui:VisualElement>
 </ui:UXML>
